tools/tests: Allow a test subdir to have `install' and `uninstall' targets
Signed-off-by: Ian Jackson <Ian.Jackson@eu.citrix.com>
Reviewed-by: Roger Pau Monné <roger.pau@citrix.com>
Acked-by: Wei Liu <wei.liu2@citrix.com>

--- a/tools/tests/Makefile
+++ b/tools/tests/Makefile
@@ -13,11 +13,8 @@ endif
 SUBDIRS-$(CONFIG_X86) += x86_emulator
 SUBDIRS-y += xen-access
 SUBDIRS-y += xenstore
+SUBDIRS-y += depriv
 SUBDIRS-$(CONFIG_HAS_PCI) += vpci
 
 .PHONY: all clean install distclean uninstall
-all clean distclean: %: subdirs-%
-
-install:
-
-uninstall:
+all clean distclean install uninstall: %: subdirs-%
