tools/tests/depriv: Install depriv-fd-checker in our private libexec directory
osstest is going to want to call it, and should not be expected to
fish it out of the build tree.

Signed-off-by: Ian Jackson <Ian.Jackson@eu.citrix.com>
Reviewed-by: Roger Pau Monné <roger.pau@citrix.com>
Acked-by: Wei Liu <wei.liu2@citrix.com>

--- a/tools/tests/depriv/Makefile
+++ b/tools/tests/depriv/Makefile
@@ -23,8 +23,9 @@ LDLIBS += $(LDLIBS_libxendevicemodel)
 LDLIBS += $(LDLIBS_libxentoolcore)
 LDLIBS += $(LDLIBS_libxentoollog)
 
-TARGETS-y := depriv-fd-checker
-TARGETS := $(TARGETS-y)
+INSTALL_PRIVBIN-y += depriv-fd-checker
+INSTALL_PRIVBIN := $(INSTALL_PRIVBIN-y)
+TARGETS += $(INSTALL_PRIVBIN)
 
 .PHONY: all
 all: build
@@ -39,6 +40,12 @@ clean:
 .PHONY: distclean
 distclean: clean
 
-install uninstall:
+install: all
+	$(INSTALL_DIR) $(DESTDIR)$(LIBEXEC_BIN)
+	$(INSTALL_PROG) $(INSTALL_PRIVBIN) $(DESTDIR)$(LIBEXEC_BIN)
+
+.PHONY: uninstall
+uninstall:
+	rm -f $(addprefix $(DESTDIR)$(LIBEXEC_BIN)/, $(INSTALL_PRIVBIN))
 
 -include $(DEPS_INCLUDE)
